--- a/partner_capital/i18n/es.po
+++ b/partner_capital/i18n/es.po
@@ -1,155 +1,133 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* crm_capital
+# 	* partner_capital
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-26 15:15+0000\n"
-"PO-Revision-Date: 2015-05-26 15:15+0000\n"
+"POT-Creation-Date: 2015-12-16 17:27+0000\n"
+"PO-Revision-Date: 2015-12-16 18:29+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"Language: es\n"
+"X-Generator: Poedit 1.8.5\n"
 
-#. module: crm_capital
-#: selection:crm.lead,company_size:0
+#. module: partner_capital
 #: selection:res.partner,company_size:0
 msgid "Big"
 msgstr "Grande"
 
-#. module: crm_capital
-#: view:crm.lead:crm_capital.crm_case_form_view_leads_capital
-#: view:crm.lead:crm_capital.crm_case_form_view_oppor_capital
-#: view:crm.lead:crm_capital.view_crm_case_leads_filter_capital
-#: view:crm.lead:crm_capital.view_crm_case_opportunities_filter_capital
-#: field:crm.lead,capital_country:0
-#: view:res.partner:crm_capital.view_partner_form_capital
-#: view:res.partner:crm_capital.view_res_partner_filter_capital
+#. module: partner_capital
+#: view:res.partner:partner_capital.view_partner_form_capital
+msgid "Capital"
+msgstr "Capital"
+
+#. module: partner_capital
+#: field:res.partner,capital_amount:0
+msgid "Capital amount"
+msgstr "Capital amount"
+
+#. module: partner_capital
+#: view:res.partner:partner_capital.view_res_partner_filter_capital
 #: field:res.partner,capital_country:0
 msgid "Capital country"
 msgstr "Nacionalidad del capital"
 
-#. module: crm_capital
-#: field:crm.lead,capital_registered:0
-#: field:res.partner,capital_registered:0
-msgid "Capital registered"
-msgstr "Capital social"
-
-#. module: crm_capital
-#: view:crm.lead:crm_capital.view_crm_case_leads_filter_capital
-#: view:crm.lead:crm_capital.view_crm_case_opportunities_filter_capital
-#: field:crm.lead,company_size:0
-#: view:res.partner:crm_capital.view_res_partner_filter_capital
+#. module: partner_capital
+#: view:res.partner:partner_capital.view_res_partner_filter_capital
 #: field:res.partner,company_size:0
 msgid "Company size"
 msgstr "Tamaño de la companía"
 
-#. module: crm_capital
-#: help:crm.lead,capital_country:0
+#. module: partner_capital
 #: help:res.partner,capital_country:0
-msgid "Country of origin of the capital of this company"
-msgstr "País de origen del capital social de esta empresa"
+msgid "Country of origin of this company's capital."
+msgstr "País de origen del capital de esta empresa."
 
-#. module: crm_capital
-#: field:crm.turnover_range,create_uid:0
+#. module: partner_capital
+#: field:res.partner.turnover_range,create_uid:0
 msgid "Created by"
 msgstr "Creado por"
 
-#. module: crm_capital
-#: field:crm.turnover_range,create_date:0
+#. module: partner_capital
+#: field:res.partner.turnover_range,create_date:0
 msgid "Created on"
 msgstr "Creado en"
 
-#. module: crm_capital
-#: field:crm.turnover_range,id:0
+#. module: partner_capital
+#: field:res.partner.turnover_range,id:0
 msgid "ID"
 msgstr "ID"
 
-#. module: crm_capital
-#: field:crm.turnover_range,write_uid:0
+#. module: partner_capital
+#: field:res.partner.turnover_range,write_uid:0
 msgid "Last Updated by"
 msgstr "Última actualización por"
 
-#. module: crm_capital
-#: field:crm.turnover_range,write_date:0
+#. module: partner_capital
+#: field:res.partner.turnover_range,write_date:0
 msgid "Last Updated on"
-msgstr "última actualización en"
+msgstr "Última actualización en"
 
-#. module: crm_capital
-#: model:ir.model,name:crm_capital.model_crm_lead
-msgid "Lead/Opportunity"
-msgstr "Iniciativa/Oportunidad"
-
-#. module: crm_capital
-#: selection:crm.lead,company_size:0
+#. module: partner_capital
 #: selection:res.partner,company_size:0
 msgid "Medium"
 msgstr "Medio"
 
-#. module: crm_capital
-#: selection:crm.lead,company_size:0
+#. module: partner_capital
 #: selection:res.partner,company_size:0
 msgid "Micro"
 msgstr "Micro"
 
-#. module: crm_capital
-#: field:crm.turnover_range,name:0
+#. module: partner_capital
+#: field:res.partner.turnover_range,name:0
 msgid "Name"
 msgstr "Nombre"
 
-#. module: crm_capital
-#: model:ir.model,name:crm_capital.model_res_partner
+#. module: partner_capital
+#: model:ir.model,name:partner_capital.model_res_partner
 msgid "Partner"
 msgstr "Empresa"
 
-#. module: crm_capital
-#: view:crm.lead:crm_capital.view_crm_case_leads_filter_capital
-#: view:crm.lead:crm_capital.view_crm_case_opportunities_filter_capital
-msgid "Sales Team"
-msgstr "Equipo de ventas"
+#. module: partner_capital
+#: help:res.partner,capital_amount:0
+msgid "Publicly registered capital amount."
+msgstr "Importe del capital públicamente registrado."
 
-#. module: crm_capital
-#: view:res.partner:crm_capital.view_res_partner_filter_capital
+#. module: partner_capital
+#: view:res.partner:partner_capital.view_res_partner_filter_capital
 msgid "Salesperson"
 msgstr "Comercial"
 
-#. module: crm_capital
-#: selection:crm.lead,company_size:0
+#. module: partner_capital
 #: selection:res.partner,company_size:0
 msgid "Small"
 msgstr "Pequeño"
 
-#. module: crm_capital
-#: view:crm.lead:crm_capital.view_crm_case_leads_filter_capital
-#: view:crm.lead:crm_capital.view_crm_case_opportunities_filter_capital
-#: view:res.partner:crm_capital.view_res_partner_filter_capital
+#. module: partner_capital
+#: view:res.partner:partner_capital.view_res_partner_filter_capital
 msgid "Turnover"
 msgstr "Facturación"
 
-#. module: crm_capital
-#: field:crm.lead,turnover_number:0
-#: field:res.partner,turnover_number:0
-msgid "Turnover number"
-msgstr "Número de facturación"
+#. module: partner_capital
+#: field:res.partner,turnover_amount:0
+msgid "Turnover amount"
+msgstr "Cantidad de facturación"
 
-#. module: crm_capital
-#: view:crm.lead:crm_capital.crm_case_form_view_leads_capital
-#: view:crm.lead:crm_capital.crm_case_form_view_oppor_capital
-#: field:crm.lead,turnover_range:0
-#: model:ir.model,name:crm_capital.model_crm_turnover_range
-#: view:res.partner:crm_capital.view_partner_form_capital
-#: field:res.partner,turnover_range:0
+#. module: partner_capital
+#: model:ir.model,name:partner_capital.model_res_partner_turnover_range
+#: field:res.partner,turnover_range_id:0
 msgid "Turnover range"
 msgstr "Rango de facturación"
 
-#. module: crm_capital
-#: view:crm.turnover_range:crm_capital.crm_turnover_range_tree_view
-#: model:ir.actions.act_window,name:crm_capital.crm_turnover_range_action
-#: model:ir.ui.menu,name:crm_capital.menu_crm_turnover_range
+#. module: partner_capital
+#: model:ir.actions.act_window,name:partner_capital.res_partner_turnover_range_action
+#: model:ir.ui.menu,name:partner_capital.menu_res_partner_turnover_range
+#: view:res.partner.turnover_range:partner_capital.res_partner_turnover_range_tree_view
 msgid "Turnover ranges"
 msgstr "Rangos de facturación"
-
