--- a/partner_contact_department/i18n/es.po
+++ b/partner_contact_department/i18n/es.po
@@ -6,103 +6,88 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-27 08:51+0000\n"
-"PO-Revision-Date: 2015-05-27 08:51+0000\n"
+"POT-Creation-Date: 2015-12-21 16:54+0100\n"
+"PO-Revision-Date: 2015-12-21 16:55+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 1.8.5\n"
 
-#. module: crm_partner_department
-#: field:crm.department,children:0
-msgid "Children"
-msgstr "Hijos"
+#. module: partner_contact_department
+#: field:res.partner.department,child_ids:0
+msgid "Child departments"
+msgstr "Departamentos hijo"
 
-#. module: crm_partner_department
-#: field:crm.department,create_uid:0
+#. module: partner_contact_department
+#: field:res.partner.department,create_uid:0
 msgid "Created by"
 msgstr "Creado por"
 
-#. module: crm_partner_department
-#: field:crm.department,create_date:0
+#. module: partner_contact_department
+#: field:res.partner.department,create_date:0
 msgid "Created on"
 msgstr "Creado en"
 
-#. module: crm_partner_department
-#: view:crm.lead:crm_partner_department.crm_case_form_view_leads_department
-#: view:crm.lead:crm_partner_department.crm_case_form_view_oppor_department
-#: view:crm.lead:crm_partner_department.view_crm_case_leads_filter_department
-#: view:crm.lead:crm_partner_department.view_crm_case_opportunities_filter_department
-#: field:crm.lead,department:0
-#: model:ir.model,name:crm_partner_department.model_crm_department
-#: view:res.partner:crm_partner_department.view_partner_form_department
-#: view:res.partner:crm_partner_department.view_res_partner_filter_department
-#: field:res.partner,department:0
+#. module: partner_contact_department
+#: model:ir.model,name:partner_contact_department.model_res_partner_department
+#: view:res.partner:partner_contact_department.view_partner_form_department
+#: view:res.partner:partner_contact_department.view_res_partner_filter_department
+#: field:res.partner,department_id:0
 msgid "Department"
 msgstr "Departamento"
 
-#. module: crm_partner_department
-#: view:crm.department:crm_partner_department.crm_department_tree_view
-#: model:ir.actions.act_window,name:crm_partner_department.crm_department_action
-#: model:ir.ui.menu,name:crm_partner_department.menu_crm_department
+#. module: partner_contact_department
+#: model:ir.actions.act_window,name:partner_contact_department.res_partner_department_action
+#: model:ir.ui.menu,name:partner_contact_department.menu_res_partner_department
+#: view:res.partner.department:partner_contact_department.res_partner_department_tree_view
 msgid "Departments"
 msgstr "Departamentos"
 
-#. module: crm_partner_department
-#: field:crm.department,id:0
+#. module: partner_contact_department
+#: field:res.partner.department,id:0
 msgid "ID"
 msgstr "ID"
 
-#. module: crm_partner_department
-#: field:crm.department,write_uid:0
+#. module: partner_contact_department
+#: field:res.partner.department,write_uid:0
 msgid "Last Updated by"
 msgstr "Última actualización por"
 
-#. module: crm_partner_department
-#: field:crm.department,write_date:0
+#. module: partner_contact_department
+#: field:res.partner.department,write_date:0
 msgid "Last Updated on"
 msgstr "Última actualización en"
 
-#. module: crm_partner_department
-#: model:ir.model,name:crm_partner_department.model_crm_lead
-msgid "Lead/Opportunity"
-msgstr "Iniciativa/Oportunidad"
-
-#. module: crm_partner_department
-#: field:crm.department,name:0
+#. module: partner_contact_department
+#: field:res.partner.department,name:0
 msgid "Name"
 msgstr "Nombre"
 
-#. module: crm_partner_department
-#: field:crm.department,parent_left:0
-msgid "Parent Left"
-msgstr "Padre Izquierdo"
+#. module: partner_contact_department
+#: field:res.partner.department,parent_id:0
+msgid "Parent department"
+msgstr "Departamento padre"
 
-#. module: crm_partner_department
-#: field:crm.department,parent_right:0
-msgid "Parent Right"
-msgstr "Padre Derecho"
+#. module: partner_contact_department
+#: field:res.partner.department,parent_left:0
+msgid "Parent left"
+msgstr "Padre izquierdo"
 
-#. module: crm_partner_department
-#: field:crm.department,parent_id:0
-msgid "Parent id"
-msgstr "ID Padre"
+#. module: partner_contact_department
+#: field:res.partner.department,parent_right:0
+msgid "Parent right"
+msgstr "Padre derecho"
 
-#. module: crm_partner_department
-#: model:ir.model,name:crm_partner_department.model_res_partner
+#. module: partner_contact_department
+#: model:ir.model,name:partner_contact_department.model_res_partner
 msgid "Partner"
 msgstr "Empresa"
 
-#. module: crm_partner_department
-#: view:crm.lead:crm_partner_department.view_crm_case_leads_filter_department
-#: view:crm.lead:crm_partner_department.view_crm_case_opportunities_filter_department
-msgid "Sales Team"
-msgstr "Equipo de ventas"
-
-#. module: crm_partner_department
-#: view:res.partner:crm_partner_department.view_res_partner_filter_department
+#. module: partner_contact_department
+#: view:res.partner:partner_contact_department.view_res_partner_filter_department
 msgid "Salesperson"
 msgstr "Comercial"
-
