--- a/base_partner_merge/i18n/gl.po
+++ b/base_partner_merge/i18n/gl.po
@@ -11,11 +11,11 @@ msgstr ""
 "POT-Creation-Date: 2016-08-20 23:45+0000\n"
 "PO-Revision-Date: 2016-08-20 23:45+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: German (https://www.transifex.com/oca/teams/23907/de/)\n"
+"Language-Team: Galician (https://www.transifex.com/oca/teams/23907/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: de\n"
+"Language: gl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: base_partner_merge
@@ -42,7 +42,7 @@ msgstr ""
 #. module: base_partner_merge
 #: model:ir.ui.view,arch_db:base_partner_merge.base_partner_merge_automatic_wizard_form
 msgid "Cancel"
-msgstr "abbrechen"
+msgstr "Cancelar"
 
 #. module: base_partner_merge
 #: model:ir.ui.view,arch_db:base_partner_merge.base_partner_merge_automatic_wizard_form
@@ -58,13 +58,13 @@ msgstr ""
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_create_uid
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_line_create_uid
 msgid "Created by"
-msgstr "erstellt von"
+msgstr "Creado por"
 
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_create_date
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_line_create_date
 msgid "Created on"
-msgstr "erstellt am"
+msgstr "Creado en"
 
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_current_line_id
@@ -90,12 +90,12 @@ msgstr ""
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_display_name
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_line_display_name
 msgid "Display Name"
-msgstr "Anzeigename"
+msgstr ""
 
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_group_by_email
 msgid "Email"
-msgstr "Email"
+msgstr ""
 
 #. module: base_partner_merge
 #: model:ir.ui.view,arch_db:base_partner_merge.base_partner_merge_automatic_wizard_form
@@ -137,19 +137,19 @@ msgstr ""
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard___last_update
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_line___last_update
 msgid "Last Modified on"
-msgstr "Zuletzt geändert am"
+msgstr ""
 
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_write_uid
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_line_write_uid
 msgid "Last Updated by"
-msgstr "zuletzt aktualisiert von"
+msgstr "ültima actualización por"
 
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_write_date
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_line_write_date
 msgid "Last Updated on"
-msgstr "zuletzt aktualisiert am"
+msgstr "Última actualización en"
 
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_line_ids
@@ -199,7 +199,7 @@ msgstr ""
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_group_by_name
 msgid "Name"
-msgstr "Bezeichnung"
+msgstr ""
 
 #. module: base_partner_merge
 #: selection:base.partner.merge.automatic.wizard,state:0
@@ -219,7 +219,7 @@ msgstr ""
 #. module: base_partner_merge
 #: model:ir.model,name:base_partner_merge.model_res_partner
 msgid "Partner"
-msgstr "Partner"
+msgstr ""
 
 #. module: base_partner_merge
 #: model:ir.ui.view,arch_db:base_partner_merge.base_partner_merge_automatic_wizard_form
@@ -262,7 +262,7 @@ msgstr ""
 #. module: base_partner_merge
 #: model:ir.model.fields,field_description:base_partner_merge.field_base_partner_merge_automatic_wizard_state
 msgid "State"
-msgstr "Bundesland"
+msgstr ""
 
 #. module: base_partner_merge
 #: model:ir.ui.view,arch_db:base_partner_merge.base_partner_merge_automatic_wizard_form
